# toml-datasets

./: .gitignore  CONTRIBUTING.md  README.md
broken/: broken-mixed-300.toml  broken-syntax-50.toml
configs/: config-mixed.toml  dependabot-config.toml  dprint.toml  foundry.toml  hugo-config.toml  mdbook-book.toml  netlify.toml  starship.toml  taplo.toml  traefik.toml  wrangler.toml  zola-config.toml
generators/: make_datasets.py
python/: complex-pyproject.toml  data-science-pyproject.toml  django-pyproject.toml  flit-pyproject.toml  poetry-pyproject.toml  pyproject.toml  ruff.toml  setuptools-pyproject.toml
rust/: axum-cargo.toml  bevy-cargo.toml  cargo.toml  cli-tool-cargo.toml  monorepo-cargo.toml  rustfmt.toml  workspace-root-cargo.toml
