[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-sync-engine"
version = "0.1.0"
description = "A high-performance data synchronization engine for cloud storage providers."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Jane Developer", email = "jane@example.com"},
]
dependencies = [
    "fastapi>=0.100.0",
    "pydantic[email]>=2.0.0",
    "httpx>=0.24.0",
    "redis>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"